--- a/index.html
+++ b/index.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" >
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta charset="UTF-8" />
-  <meta name="viewport" content ="width=device-width, minimum-scale=1.0, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0">
   <title>The Flatiron School</title>
   <link rel='stylesheet' href="css/style.css" type='text/css' media='all' />
   <!-- <link rel='stylesheet' href="css/style-dark.css" type='text/css' media='all' /> -->
   <link rel='stylesheet' href="css/media-queries.css" type='text/css' media='all' />
   <link rel='stylesheet' href="css/flexslider.css" type='text/css' media='screen' />
   <link rel='stylesheet' href="css/font-awesome.css" type='text/css' media='screen' />
-  <link rel='stylesheet' id='google_merriweather-css'  href='http://fonts.googleapis.com/css?family=Merriweather:400,700&ver=3.5' type='text/css' media='all' />
+  <link rel='stylesheet' id='google_merriweather-css'
+    href='http://fonts.googleapis.com/css?family=Merriweather:400,700&ver=3.5' type='text/css' media='all' />
   <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
-  <style type="text/css">a{color:#60BDDB}</style>
+  <style type="text/css">
+    a {
+      color: #60BDDB
+    }
+  </style>
 </head>
 
 <body class="home page students">
@@ -54,7 +60,9 @@
                 </ul>
 
               </li>
-              <li><a href="http://go.flatironschool.com/apply"><font color="#26c4ff">Apply</font></a>
+              <li><a href="http://go.flatironschool.com/apply">
+                  <font color="#26c4ff">Apply</font>
+                </a>
               </li>
               <li>
                 <a href="http://flatironschool.com/employers">Employers</a>
@@ -174,6 +182,26 @@
               </li>
               <!-- End Student 4 -->
 
+              <!-- Begin Student 5 -->
+              <li class="home-blog-post">
+                <div class="blog-title">
+                  <div class="big-comment">
+                    <h3>Student Name</h3>
+                  </div>
+                  <p class="home-blog-post-meta">Github Username</p>
+                </div>
+                <div class="clear"></div>
+                <div class="excerpt">
+                  <p>Bio</p>
+                </div>
+                <hr />
+                <div class="excerpt">
+                  <strong>Favorite Food: _</strong>
+                </div>
+                <div class="clear"></div>
+              </li>
+              <!-- End Student 5 -->
+
             </ul>
           </div>
         </div>
@@ -192,7 +220,7 @@
   <div class="footer">
     <div class="footer-text">
       <div class="footer-text-right">
-        <div class="copyright">&copy; 2013. The Flatiron School.  All Your Rights Are Belong To Us.</div>
+        <div class="copyright">&copy; 2013. The Flatiron School. All Your Rights Are Belong To Us.</div>
       </div>
       <div class="clear"></div>
     </div>
@@ -206,7 +234,7 @@
     _gaq.push(['_setDomainName', 'flatironschool.com']);
     _gaq.push(['_trackPageview']);
 
-    (function() {
+    (function () {
       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
       ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
@@ -215,4 +243,5 @@
   </script>
 
 </body>
+
 </html>
