--- a/index.html
+++ b/index.html
@@ -158,17 +158,25 @@
               <li class="home-blog-post">
                 <div class="blog-title">
                   <div class="big-comment">
-                    <h3>Student Name</h3>
+                    <h3>Olivia Auzenne</h3>
                   </div>
-                  <p class="home-blog-post-meta">Github Username</p>
+                  <p class="home-blog-post-meta">OAuzenne</p>
                 </div>
                 <div class="clear"></div>
                 <div class="excerpt">
-                  <p>Bio</p>
+                  <p>Hi, there! My name is Olivia - native Houstonian and
+                    full-time entrepreneur. My company provides marketing
+                    and branding services to small business owners. I'm
+                    into everything design, meditation, yoga, quantum physics,
+                    and philosophy. I'm all about advancement and know that
+                    learning how to code is critical for the next steps I'd
+                    like to take in life. I also love it. Super excited to
+                    get to know all of you and jump two feet in to this world
+                    of tech!</p>
                 </div>
                 <hr />
                 <div class="excerpt">
-                  <strong>Favorite Food: _</strong>
+                  <strong>Favorite Food: Indian</strong>
                 </div>
                 <div class="clear"></div>
               </li>
