finished Olivia-Brumfield

--- a/index.html
+++ b/index.html
@@ -118,17 +118,17 @@
               <li class="home-blog-post">
                 <div class="blog-title">
                   <div class="big-comment">
-                    <h3>Student Name</h3>
+                    <h3>Olivia Brumfield</h3>
                   </div>
-                  <p class="home-blog-post-meta">Github Username</p>
+                  <p class="home-blog-post-meta">jbrumfield19</p>
                 </div>
                 <div class="clear"></div>
                 <div class="excerpt">
-                  <p>Bio</p>
+                    <p>Graduated Highschool. Love programming and cars. Enjoys going out. </p>
                 </div>
                 <hr />
                 <div class="excerpt">
-                  <strong>Favorite Food: _</strong>
+                  <strong>Favorite Food: Sushi _</strong>
                 </div>
                 <div class="clear"></div>
               </li>
