--- a/index.html
+++ b/index.html
@@ -106,17 +106,18 @@
               <li class="home-blog-post">
                 <div class="blog-title">
                   <div class="big-comment">
-                    <h3>Student Name</h3>
+                    <h3>Zoe Bai</h3>
                   </div>
-                  <p class="home-blog-post-meta">Github Username</p>
+                  <p class="home-blog-post-meta">ZoeBai0714</p>
                 </div>
                 <div class="clear"></div>
                 <div class="excerpt">
-                  <p>Bio</p>
+                  <p>Hey everyone, originally from China. Recently moved from London to Houston. Let's work on it
+                    together!</p>
                 </div>
                 <hr />
                 <div class="excerpt">
-                  <strong>Favorite Food: _</strong>
+                  <strong>Favorite Food: Chick stir fry</strong>
                 </div>
                 <div class="clear"></div>
               </li>
