--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
               <li class="home-blog-post">
                 <div class="blog-title">
                   <div class="big-comment">
-                    <h3>Student Name</h3>
+                    <h3>Hemalatha Murugans</h3>
                   </div>
-                  <p class="home-blog-post-meta">Github Username</p>
+                  <p class="home-blog-post-meta">HemalathaMurugans</p>
                 </div>
                 <div class="clear"></div>
                 <div class="excerpt">
@@ -128,7 +128,7 @@
                 </div>
                 <hr />
                 <div class="excerpt">
-                  <strong>Favorite Food: _</strong>
+                  <strong>Favorite Food: Vanilla Icecream</strong>
                 </div>
                 <div class="clear"></div>
               </li>
