--- a/index.html
+++ b/index.html
@@ -138,17 +138,17 @@
               <li class="home-blog-post">
                 <div class="blog-title">
                   <div class="big-comment">
-                    <h3>Student Name</h3>
+                    <h3>Adam Moran</h3>
                   </div>
-                  <p class="home-blog-post-meta">Github Username</p>
+                  <p class="home-blog-post-meta">moranja</p>
                 </div>
                 <div class="clear"></div>
                 <div class="excerpt">
-                  <p>Bio</p>
+                  <p>Hello, I’m Adam. I’ve been working in the oil industry for the past few years, but got tired of that and wanted to switch gears. I’m excited to get to meet all of y’all.</p>
                 </div>
                 <hr />
                 <div class="excerpt">
-                  <strong>Favorite Food: _</strong>
+                  <strong>Favorite Food: Indian </strong>
                 </div>
                 <div class="clear"></div>
               </li>
