--- a/index.html
+++ b/index.html
@@ -186,17 +186,17 @@
               <li class="home-blog-post">
                 <div class="blog-title">
                   <div class="big-comment">
-                    <h3>Student Name</h3>
+                    <h3>Rochell Flood</h3>
                   </div>
-                  <p class="home-blog-post-meta">Github Username</p>
+                  <p class="home-blog-post-meta">codiegirl</p>
                 </div>
                 <div class="clear"></div>
                 <div class="excerpt">
-                  <p>Bio</p>
+                  <p>Experienced educator. Houstonian native. Lived in Isreal for 14 years, teaching English to all ages. I love sewing, GOT, and shopping, including window shopping in my pasttime. </p>
                 </div>
                 <hr />
                 <div class="excerpt">
-                  <strong>Favorite Food: _</strong>
+                  <strong>Favorite Food: Popcorn</strong>
                 </div>
                 <div class="clear"></div>
               </li>
