--- a/index.html
+++ b/index.html
@@ -166,17 +166,17 @@
               <li class="home-blog-post">
                 <div class="blog-title">
                   <div class="big-comment">
-                    <h3>Student Name</h3>
+                    <h3>Jing Chen</h3>
                   </div>
-                  <p class="home-blog-post-meta">Github Username</p>
+                  <p class="home-blog-post-meta">jcjc2019</p>
                 </div>
                 <div class="clear"></div>
                 <div class="excerpt">
-                  <p>Bio</p>
+                  <p>I have studied Chinese literature for over 10 years. I have a Ph.D in Chinese Literature from Univresity of Illinois. Recently relocated to the Houston area from Illinois.  I love coding, traveling, teaching literature and trying different cuisines</p>
                 </div>
                 <hr />
                 <div class="excerpt">
-                  <strong>Favorite Food: _</strong>
+                  <strong>Favorite Food: Tofu</strong>
                 </div>
                 <div class="clear"></div>
               </li>
