--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
               </li>
               <li>
                 <a href="#">The School</a>
+                <a href="#">The Jordan</a>
 
                 <ul class="sub-menu">
                   <li><a href="http://flatironschool.com/events">Events</a></li>
