--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
                 </div>
                 <div class="clear"></div>
                 <div class="excerpt">
-                  <p>Bio</p>
+                  <p>Bio: I'm a mother of a beautiful three year old boy. I graduated university
+                  six years ago, and got a degree in Electronics and Communications.</p>
                 </div>
                 <hr />
                 <div class="excerpt">
