Added Cory Harper's Bio

--- a/index.html
+++ b/index.html
@@ -98,17 +98,17 @@
               <li class="home-blog-post">
                 <div class="blog-title">
                   <div class="big-comment">
-                    <h3>Student Name</h3>
+                    <h3>Cory Harper</h3>
                   </div>
-                  <p class="home-blog-post-meta">Github Username</p>
+                  <p class="home-blog-post-meta">zepher2211</p>
                 </div>
                 <div class="clear"></div>
                 <div class="excerpt">
-                  <p>Bio</p>
+                  <p>Bio: Hey there! My name is Cory, I came here from North Carolina after struggling between low paying entry level positions and finding myself burdened with student loan debt. I've had an interest in coding since I was a kid when I started but never continued to learn python. I'm an avid gamer, writer, and reader. I love philosophy and politics so feel free to have a discussion!</p>
                 </div>
                 <hr />
                 <div class="excerpt">
-                  <strong>Favorite Food: _</strong>
+                  <strong>Favorite Food: Liquor</strong>
                 </div>
                 <div class="clear"></div>
               </li>
