--- a/index.html
+++ b/index.html
@@ -158,17 +158,20 @@
               <li class="home-blog-post">
                 <div class="blog-title">
                   <div class="big-comment">
-                    <h3>Student Name</h3>
+                    <h3>Theodore Kimana</h3>
                   </div>
-                  <p class="home-blog-post-meta">Github Username</p>
+                  <p class="home-blog-post-meta"></p>
                 </div>
                 <div class="clear"></div>
                 <div class="excerpt">
-                  <p>Bio</p>
+                  <p>Hi everyone! My name is Theodore Kimana, you can call me TK. 
+                    I've always wanted to know something that I love doing. And now I think I got it by finding Flatiron school. 
+                    I don't have a lot of experience in coding, but I hope it's going to improve if we work hand in hand with Flatiron school, 
+                    and I can't wait to have a career in coding.</p>
                 </div>
                 <hr />
                 <div class="excerpt">
-                  <strong>Favorite Food: _</strong>
+                  <strong>Favorite Food: Burgers </strong>
                 </div>
                 <div class="clear"></div>
               </li>
