Bobby Vidal's Profile

--- a/index.html
+++ b/index.html
@@ -140,11 +140,13 @@
                   <div class="big-comment">
                     <h3>Bobby Vidal</h3>
                   </div>
-                  <p class="home-blog-post-meta">Github Username</p>
+                  <p class="home-blog-post-meta">BobbyVidal</p>
                 </div>
                 <div class="clear"></div>
                 <div class="excerpt">
-                  <p>Bobby Vidal graduated from University of Houston, lst december. His favorite things to do are power lifting, video games and coding. With coding he believes to explore his creativity.</p>
+                  <p>Bobby Vidal graduated from University of Houston, last december.
+                     His favorite things to do are power lifting, video games and coding.
+                     With coding he believes to explore his creativity.</p>
                 </div>
                 <hr />
                 <div class="excerpt">
