--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 </div>
                 <div class="clear"></div>
                 <div class="excerpt">
-                  <p>Hey everyone, originally from China. Recently moved from London to Houston. Let's work on it
+                  <p>Hey everyone, I'm originally from China. Recently moved from London to Houston. Let's work on it
                     together!</p>
                 </div>
                 <hr />
