--- a/index.html
+++ b/index.html
@@ -126,17 +126,17 @@
               <li class="home-blog-post">
                 <div class="blog-title">
                   <div class="big-comment">
-                    <h3>Student Name</h3>
+                    <h3>Mark Pothecary</h3>
                   </div>
-                  <p class="home-blog-post-meta">Github Username</p>
+                  <p class="home-blog-post-meta">markpothers</p>
                 </div>
                 <div class="clear"></div>
                 <div class="excerpt">
-                  <p>Bio</p>
+                  <p>Moved to Houston from England in 2012, I've been selling lab equipment since then. I've been looking to branch out.</p>
                 </div>
                 <hr />
                 <div class="excerpt">
-                  <strong>Favorite Food: _</strong>
+                  <strong>Favorite Food: Roast Chicken Dinner</strong>
                 </div>
                 <div class="clear"></div>
               </li>
