Before the merge

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               <li class="home-blog-post">
                 <div class="blog-title">
                   <div class="big-comment">
-                    <h3>Olivia Brumfield</h3>
+                    <h3>Jessica Brumfield</h3>
                   </div>
                   <p class="home-blog-post-meta">jbrumfield19</p>
                 </div>
