--- a/index.html
+++ b/index.html
@@ -119,33 +119,16 @@
               <li class="home-blog-post">
                 <div class="blog-title">
                   <div class="big-comment">
-<<<<<<< HEAD
                     <h3>Jessica Brumfield</h3>
-=======
-<<<<<<< HEAD
-                    <h3>Jessica Brumfield</h3>
-=======
-                    <h3>Olivia Brumfield</h3>
->>>>>>> refs/remotes/origin/master
->>>>>>> 3280d80f7295d009aed7ba7bcc1652b6eddcb48e
                   </div>
                   <p class="home-blog-post-meta">jbrumfield19</p>
                 </div>
                 <div class="clear"></div>
                 <div class="excerpt">
-<<<<<<< HEAD
-                  <p>just graduated high school, loves cars, code, and going out</p>
-                </div>
-                <hr />
-                <div class="excerpt">
-                  <strong>Favorite Food: sushi</strong>
-=======
                     <p>Graduated Highschool. Love programming and cars. Enjoys going out. </p>
                 </div>
-                <hr />
                 <div class="excerpt">
-                  <strong>Favorite Food: Sushi _</strong>
->>>>>>> refs/remotes/origin/master
+                  <strong>Favorite Food: Sushi:</strong>
                 </div>
                 <div class="clear"></div>
               </li>
