--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
                 </div>
                 <div class="clear"></div>
                 <div class="excerpt">
-                  <p>Hi everyone! My name is Theodore Kimana, you can call me TK. 
-                    I've always wanted to know something that I love doing. And now I think I got it by finding Flatiron school. 
-                    I don't have a lot of experience in coding, but I hope it's going to improve if we work hand in hand with Flatiron school, 
+                  <p>Hi everyone! My name is Theodore Kimana, you can call me TK.
+                    I've always wanted to know something that I love doing. And now I think I got it by finding Flatiron school.
+                    I don't have a lot of experience in coding, but I hope it's going to improve if we work hand in hand with Flatiron school,
                     and I can't wait to have a career in coding.</p>
                 </div>
                 <hr />
@@ -184,17 +184,17 @@
               <li class="home-blog-post">
                 <div class="blog-title">
                   <div class="big-comment">
-                    <h3>Student Name</h3>
+                    <h3>Josie Yao</h3>
                   </div>
-                  <p class="home-blog-post-meta">Github Username</p>
+                  <p class="home-blog-post-meta">josieyao</p>
                 </div>
                 <div class="clear"></div>
                 <div class="excerpt">
-                  <p>Bio</p>
+                  <p>Bio: Hi everyone, my name is Josephine & I’m originally from Los Angeles. I moved to Houston to solely focus on programming & attend Flatiron. I used to work in the healthcare industry & wore different hats but, overtime, I realized it wasn’t for me anymore. I’m relatively new to coding but I’ve been enjoying how you can really utilize your creativity! On my freetime, I love to travel & dabble in design.</p>
                 </div>
                 <hr />
                 <div class="excerpt">
-                  <strong>Favorite Food: _</strong>
+                  <strong>Favorite Food: Pizza</strong>
                 </div>
                 <div class="clear"></div>
               </li>
